--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span>Everyday Categories</span>
             </div>
             <div class="content">
-                <p>Everyday Food has developed recipes with the home cook in mind. These delicious dishes featured on "RY Paris" call for simple ingredients that you already have in your pantry or can easliy find at local grocery stores and farmers' markets.</p>
+                <p>Everyday Food has developed recipes with the home cook in mind. These delicious dishes featured on "RY Paris" call for simple ingredients that you already have in your pantry or can easily find at local grocery stores and farmers' markets.</p>
             </div>
             <div class="images">
                 <img class="imageSize" src="images/breakfast-ideas.jpg">
@@ -58,7 +58,7 @@
             </div>
             <div class="content">
                 <p>This is not the aspirational fluff of Instagram wall neon; it's fact. Recent surveys have shown that a majority of travelers consider food first when planning a trip, even ahead of where they sleep. Add to this that peole are also traveling more than ever before - earthlings logged a record-breaking 1.4 billion international trips last year - and it's safe to say that the hunger for new culinary experiences is more ravenous than ever.</p>
-                <p>While the endlessly alluring bistros of Paris, izakayas of Tokyo, shwarma stands of Tel Aviv, and tasting menus of Mexico City Will always top many people's list of cravings, we're continually on the lookout for something new to fill our bellies, our passports, and our feeds.</p>
+                <p>While the endlessly alluring bistros of Paris, izakayas of Tokyo, shwarma stands of Tel Aviv, and tasting menus of Mexico City will always top many people's list of cravings, we're continually on the lookout for something new to fill our bellies, our passports, and our feeds.</p>
             </div>
             <div class="images">
                 <img class="Wimage" src="images/burger.jpg">
