--- a/recipe.html
+++ b/recipe.html
@@ -25,7 +25,7 @@
                 <span>Cook: 15 min</span>
             </div>
             <div>
-                <span>Yeild: 4 Hamburgers</span>
+                <span>Yield: 4 Hamburgers</span>
             </div>
         </div>
         <div class="recipe">
@@ -35,7 +35,7 @@
                 <div class="inputP"><input class="click" type="button" value="Save Recipe"><img src="images/printSymbol.png" width="35"></div>
             </div>
             <div class="comment">
-                <p>"No more dry, lackluser burgers. These are juicy, and spices can be easily added or changed to suit anyone's taste. Baste frequently with your favorite babeque sauce. If you find the meat mixture too mushy, just add more bread crumbs until it fors matties that hold their shape."</p>
+                <p>"No more dry, lackluster burgers. These are juicy, and spices can be easily added or changed to suit anyone's taste. Baste frequently with your favorite barbeque sauce. If you find the meat mixture too mushy, just add more bread crumbs until it forms patties that hold their shape."</p>
             </div>
             <div class="directions">
                 <div class="ingerdients">
